--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@ $(document).ready(function () {
   <a href="index.html">Home</a>
 </li>
 <li>
-  <a href="projects.html">Projects</a>
+  <a href="pool-binary-trials.html">pool-binary-trials exercise</a>
 </li>
 <li>
   <a href="about.html">About Me</a>
